# LoopThroughLoss

./: .gitignore  .gitmodules  CMakeLists.txt  LoopThroughLoss  Makefile  Makefile.WindowsCross  README.md
assets/textures/items/: answering_machine.xpm  armchair.xpm  chair.xpm  chair2.xpm  coffee_table.xpm  console.xpm  floorlamp.xpm
assets/textures/npc/: mother.xpm  mother1_blur.xpm  mother1_blur2.xpm  mother2_blur.xpm
assets/textures/walls/: wallTexture.xpm
include/: LoopThroughLoss.h  assets_path.h  mother_dialogues.h
include/old_include/: calico_kitty_dialogues.h  witch_kitty_dialogues.h
libft/include/: libft.h
maps/: LoopThroughLoss.cub  adventure.cub
mlx/: mlx_int_anti_resize_win.c
mlx/test/: main.c
new_assets_folder/items/: armchair.xpm  chair2.xpm  floorlamp.xpm
objs/srcs/: main.d
objs/srcs/game/: game_loop.d
objs/srcs/parsing/: convert_map_char_to_value.d  extract_file_content.d  parse_map.d  parse_map_layout_helpers.d
objs/srcs/utils/: error.d  x_memory_utils_one.d  x_memory_utils_two.d
srcs/: main.c
srcs/events/: handle_events.c  handle_interaction.c  handle_mouse.c  handle_pause.c  interaction_utils.c
srcs/events/door_interaction/: interact_with_door.c
srcs/events/item_interaction/: interact_with_item.c
srcs/events/npc_interaction/: interact_with_npc.c  npc_dialogue.c
srcs/game/: game_loop.c
srcs/game/doors/: spawn_door.c
srcs/game/entities/: spawn_door.c  spawn_items.c  spawn_mother.c  update_entities_sort.c
srcs/game/events/: handle_events.c
srcs/game/init_game/: init_game.c  init_player.c
srcs/game/interaction/: interact_with_door.c  interact_with_item.c  interact_with_npc.c  interaction_utils.c
srcs/game/items/: spawn_item_utils.c  spawn_items.c  update_items.c
srcs/game/move_entity/: move_utils.c
srcs/game/move_player/: handle_player_move.c  is_map_position_valid_player.c  is_player_move_valid.c
srcs/game/music/: music.c
srcs/game/npc/: play_npc_animation.c  spawn_mother.c  spawn_npc_utils.c  update_all_npcs.c  update_npc.c
srcs/game/rendering/: draw_background.c  draw_entities.c  draw_mother.c  draw_utils.c  fill_background.c  render_scene.c
srcs/game/story_telling/: get_dial_phase.c  track_npc_strory.c  track_story_advancement.c
srcs/game/transition/: transition.c
srcs/game/utils/: game_utils.c  load_textures.c
srcs/parsing/: convert_map_char_to_value.c  extract_file_content.c  parse_map.c  parse_map_layout_helpers.c
srcs/utils/: error.c  x_memory_utils_one.c  x_memory_utils_two.c
srcs/utils/free_memory/: free_items.c  free_memory.c  (+1 more)
web/: shell.html
(+63 files in other folders)
